--- a/package.json
+++ b/package.json
@@ -30,7 +30,10 @@
     "react-dom": "^18.3.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
-    "zod": "^3.23.3"
+    "zod": "^3.23.3",
+    "@fortawesome/fontawesome-svg-core": "^6.2.1",
+    "@fortawesome/free-solid-svg-icons": "^6.2.1",
+    "@fortawesome/react-fontawesome": "^0.2.0"
   },
   "devDependencies": {
     "@types/eslint": "^8.56.2",
